DataLayer init: Database Model

--- a/GolfAPI/appsettings.json
+++ b/GolfAPI/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GolfTestConnection": "Server=localhost\\SQLEXPRESS;Database=GolfTestDatabase;Trusted_Connection=True;"
+  }
 }
