--- a/GolfAPI/appsettings.json
+++ b/GolfAPI/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    //we could have different environments
     "GolfTestConnection": "Server=localhost\\SQLEXPRESS;Database=GolfTestDatabase;Trusted_Connection=True;"
   }
 }
