--- a/GolfAPI/appsettings.json
+++ b/GolfAPI/appsettings.json
@@ -4,6 +4,9 @@
       "Default": "Warning"
     }
   },
+  "AppSettings": {
+    "SecretKey": "a really long vast key value aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //we could have different environments
